Fix StackTrace symbol entry string handling under Fuchsia.

Bug: 752255
Change-Id: I840cd990acb4475847d68ca59c34a307ce0307c5
Reviewed-on: https://chromium-review.googlesource.com/604639
Reviewed-by: Kevin Marshall <kmarshall@chromium.org>
Commit-Queue: Wez <wez@chromium.org>
Cr-Commit-Position: refs/heads/master@{#493138}
Former-commit-id: 6180470e5764765eaf830bc989d4449e9959f5bd